# pybind11_example

./: README.md  WORKSPACE
foo/: BUILD.bazel  MODULE.bazel  foo.cpp  foo_py.py  run.sh
